--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -22,9 +22,11 @@
 
 on:
   push:
-    - master
+    branches:
+      - master
   pull_request:
-    - master
+    branches:
+      - master
 
 name: build-book-release
 
