fixed bioc version

--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -102,7 +102,7 @@ jobs:
 
       - name: Set BiocVersion
         run: |
-          BiocManager::install(version = "release", ask = FALSE)
+          BiocManager::install(version = "3.12", ask = FALSE)
         shell: Rscript {0}
 
       - name: Cache R packages on Linux
