--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -159,7 +159,7 @@ jobs:
         if: github.ref == 'refs/heads/master' && runner.os == 'Linux'
         run: |
           ls -l
-          echo pwd
+          git status
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git worktree add --track -B gh-pages docs origin/gh-pages
