--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -158,6 +158,7 @@ jobs:
       - name: Bookdown
         if: github.ref == 'refs/heads/master' && runner.os == 'Linux'
         run: |
+          git fetch --all
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git worktree add --track -B gh-pages docs origin/gh-pages
