added Remotes section to DESCRIPTION

--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -159,13 +159,14 @@ jobs:
         if: github.ref == 'refs/heads/master' && runner.os == 'Linux'
         run: |
           git fetch --all
+          commit=$(git --work-tree=../ rev-parse --verify --short HEAD)
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git worktree add --track -B gh-pages docs origin/gh-pages
           Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::gitbook")'
           cd docs
           git add -A .
-          git commit --allow-empty -m "Build book @$(git rev-parse --verify --short HEAD)"
+          git commit --allow-empty -m "Build book @$commit"
           git push --force origin HEAD:gh-pages
           cd ..
 
