--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,5 +30,10 @@ Suggests:
     knitr,
     rmarkdown,
     bookdown
+Remotes:
+    github::FelixErnst/SEtup,
+    github::FelixErnst/MicrobiomeExperiment,
+    github::FelixErnst/mia,
+    github::FelixErnst/breakaway
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
