--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: MiaBook
 Title: Microbiome Analysis Book
 Version: 0.98.0001
-Date: 2020-11-02
+Date: 2020-11-03
 Authors@R: 
     c(person("Leo", "Lahti", role = c("aut")),
       person("Felix GM", "Ernst", email = "felix.gm.ernst@outlook.com",
@@ -10,7 +10,7 @@ Authors@R:
 Description:
     This is a reference cookbook for performing **Microbiome Analysis** with 
     Bioconductor in R.
-License: CC BY-NC-ND 3.0 US
+License: CC BY-NC-SA 3.0 US
 Encoding: UTF-8
 URL: https://github.com/microbiome/MiaBook
 BugReports: https://github.com/microbiome/MiaBook/issues
@@ -31,7 +31,6 @@ Suggests:
     rmarkdown,
     bookdown
 Remotes:
-    github::FelixErnst/SEtup,
     github::FelixErnst/MicrobiomeExperiment,
     github::FelixErnst/mia,
     github::FelixErnst/breakaway
