--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -8,4 +8,5 @@ language:
 output_dir: "docs"
 rmd_files: ["index.Rmd",
             "01-intro.Rmd",
+            "02-data-operations.Rmd",
             "99-bibliography.Rmd"]
