prevalence analyses added

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -8,4 +8,6 @@ language:
 output_dir: "docs"
 rmd_files: ["index.Rmd",
             "01-intro.Rmd",
+            "02-manipulation.Rmd",
+	    "03-concepts.Rmd",
             "99-bibliography.Rmd"]
