additional tweak the GHA deployment

--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -165,7 +165,7 @@ jobs:
           git worktree add --track -B gh-pages docs origin/gh-pages
 
       - name: Bookdown
-        if: github.ref == 'refs/heads/master' && runner.os == 'Linux'
+        if: runner.os == 'Linux'
         run: |
           Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::gitbook")'
 
@@ -179,7 +179,7 @@ jobs:
           cd ..
 
       - name: Upload check results
-        if: github.ref == 'refs/heads/master' && runner.os == 'Linux' && failure()
+        if: runner.os == 'Linux' && failure()
         uses: actions/upload-artifact@master
         with:
           name: ${{ runner.os }}-biocversion-RELEASE_3_12-r-4.0-results
