--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,12 +25,14 @@ Depends:
 Imports:
     scater,
     scuttle,
-    scran,
-    pheatmap
+    scran
 Suggests:
     knitr,
     rmarkdown,
-    bookdown
+    bookdown,
+    dplyr,
+    ggplot2,
+    tibble
 Remotes:
     github::FelixErnst/MicrobiomeExperiment,
     github::FelixErnst/mia,
