--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -9,4 +9,5 @@ output_dir: "docs"
 rmd_files: ["index.Rmd",
             "01-intro.Rmd",
             "02-data-operations.Rmd",
+	    "03-concepts.Rmd",
             "99-bibliography.Rmd"]
