--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,10 @@ Imports:
 Suggests:
     knitr,
     rmarkdown,
-    bookdown
+    bookdown,
+    dplyr,
+    ggplot2,
+    tibble
 Remotes:
     github::FelixErnst/MicrobiomeExperiment,
     github::FelixErnst/mia,
