--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: MiaBook
 Title: Microbiome Analysis Book
-Version: 0.98.0001
-Date: 2020-11-03
+Version: 0.98.0002
+Date: 2020-11-08
 Authors@R: 
     c(person("Leo", "Lahti", role = c("aut")),
+      person("Sudershan", "Shetty", role = c("aut")),
       person("Felix GM", "Ernst", email = "felix.gm.ernst@outlook.com",
              role = c("aut", "cre"),
              comment = c(ORCID = "0000-0001-5064-0928")))
