Add section structure, introduction text and reused code from scater

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,25 +18,26 @@ BugReports: https://github.com/microbiome/MiaBook/issues
 LazyData: true
 biocViews:
     Book
-Depends:
-    R (>= 4.0),
-    TreeSummarizedExperiment,
-    MicrobiomeExperiment,
-    mia
-Imports:
-    scater,
-    scuttle,
-    scran
 Suggests:
-    knitr,
-    rmarkdown,
     bookdown,
     dplyr,
     ggplot2,
-    tibble
+    knitr,
+    mia,
+    miaViz,
+    MicrobiomeExperiment,
+    rebook,
+    rmarkdown,
+    Rtsne,
+    scater,
+    scuttle,
+    scran,
+    tibble,
+    TreeSummarizedExperiment,
+    uwot
 Remotes:
     github::FelixErnst/MicrobiomeExperiment,
     github::FelixErnst/mia,
-    github::FelixErnst/breakaway
+    github::adw96/breakaway
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
