--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -7,6 +7,12 @@ language:
     chapter_name: "Chapter "
 output_dir: "docs"
 rmd_files: ["index.Rmd",
-            "01-intro.Rmd",
-            "02-data-operations.Rmd",
+            # Introduction
+            "01-introduction.Rmd",
+            # Focus Topics
+            "10-overview.Rmd",
+            "11-taxonomic-information.Rmd",
+            "12-quality-control.Rmd",
+            # Appendix
+            "90-example-data.Rmd",
             "99-bibliography.Rmd"]
