--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,8 @@ Title: Microbiome Analysis Book
 Version: 0.98.0003
 Date: 2020-12-02
 Authors@R: 
-    c(person("Leo", "Lahti", role = c("aut")),
+    c(person("Leo", "Lahti", role = c("aut"),
+             comment = c(ORCID = "0000-0001-5537-637X")),
       person("Sudarshan", "Shetty", role = c("aut")),
       person("Felix GM", "Ernst", email = "felix.gm.ernst@outlook.com",
              role = c("aut", "cre"),
