added two chapters

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -14,6 +14,8 @@ rmd_files: ["index.Rmd",
             "11-taxonomic-information.Rmd",
             "12-quality-control.Rmd",
             "13-microbiome-exploration.Rmd",
+            "14-timeseries.Rmd",
+            "15-multitable.Rmd",	    	    
             # Appendix
             "90-example-data.Rmd",
             "99-bibliography.Rmd"]
