--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -14,8 +14,11 @@ rmd_files: ["index.Rmd",
             "11-taxonomic-information.Rmd",
             "12-quality-control.Rmd",
             "13-microbiome-exploration.Rmd",
-            "15-timeseries.Rmd",
-            "16-multitable.Rmd",	    	    
+            "14-microbiome-diversity.Rmd",
+            "15-microbiome-community.Rmd",
+            "16-differential-abundance.Rmd",
+            "17-timeseries.Rmd",
+            "18-multitable.Rmd",
             # Appendix
             "90-example-data.Rmd",
             "99-bibliography.Rmd"]
