--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -174,7 +174,7 @@ jobs:
         run: |
           cd docs
           git add -A .
-          git commit --allow-empty -m "Build book @$commit"
+          git commit --allow-empty -m "Build book @$(git rev-parse --short HEAD)"
           git push --force origin HEAD:gh-pages
           cd ..
 
