added initial computation of PERMANOVA and PERMDISP2

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,6 +26,7 @@ Suggests:
     knitr,
     mia,
     miaViz,
+    microbiomeDataSets,
     MicrobiomeExperiment,
     rebook,
     rmarkdown,
@@ -40,6 +41,7 @@ Remotes:
     github::FelixErnst/MicrobiomeExperiment,
     github::FelixErnst/mia,
     github::microbiome/miaViz,    
+    github::microbiome/microbiomeDataSets,    
     github::adw96/breakaway
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
