coment out ch 11 in bookdown.yml as it fails

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -11,7 +11,7 @@ rmd_files: ["index.Rmd",
             "01-introduction.Rmd",
             # Focus Topics
             "10-overview.Rmd",
-            "11-taxonomic-information.Rmd",
+            # "11-taxonomic-information.Rmd",
             "12-quality-control.Rmd",
             "13-microbiome-exploration.Rmd",
             "14-microbiome-diversity.Rmd",
