coment out ch 13 in bookdown.yml as it takes ages

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -13,7 +13,7 @@ rmd_files: ["index.Rmd",
             "10-overview.Rmd",
             # "11-taxonomic-information.Rmd",
             "12-quality-control.Rmd",
-            "13-microbiome-exploration.Rmd",
+            # "13-microbiome-exploration.Rmd",
             "14-microbiome-diversity.Rmd",
             "15-microbiome-community.Rmd",
             "16-differential-abundance.Rmd",
