--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -11,9 +11,9 @@ rmd_files: ["index.Rmd",
             "01-introduction.Rmd",
             # Focus Topics
             "10-overview.Rmd",
-            # "11-taxonomic-information.Rmd",
+            "11-taxonomic-information.Rmd",
             "12-quality-control.Rmd",
-            # "13-microbiome-exploration.Rmd",
+            "13-microbiome-exploration.Rmd",
             "14-microbiome-diversity.Rmd",
             "15-microbiome-community.Rmd",
             "16-differential-abundance.Rmd",
