added function reference page

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -21,4 +21,5 @@ rmd_files: ["index.Rmd",
             "18-multitable.Rmd",
             # Appendix
             "90-example-data.Rmd",
+            "98-function-reference.Rmd",
             "99-bibliography.Rmd"]
