--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,6 @@
 Package: MiaBook
 Title: Microbiome Analysis Book
-Version: 0.98.0003
-Date: 2020-12-06
+Version: 0.98.0004
 Authors@R: 
     c(person("Leo", "Lahti", role = c("aut"),
              comment = c(ORCID = "0000-0001-5537-637X")),
@@ -40,7 +39,6 @@ Suggests:
 Remotes:
     github::FelixErnst/mia,
     github::microbiome/miaViz,    
-    github::microbiome/microbiomeDataSets,    
-    github::adw96/breakaway
+    github::microbiome/microbiomeDataSets
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
