updated DESCRIPTION and GHA, the 2nd

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,6 @@ Suggests:
     uwot
 Remotes:
     github::FelixErnst/mia,
-    github::microbiome/miaViz,    
-    github::microbiome/microbiomeDataSets
+    github::microbiome/miaViz
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
