--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: MiaBook
 Title: Microbiome Analysis Book
 Version: 0.98.5
+Date: 2021-03-05
 Authors@R: 
     c(person("Leo", "Lahti", role = c("aut"),
              comment = c(ORCID = "0000-0001-5537-637X")),
