added phyloseq to Suggests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,7 +36,8 @@ Suggests:
     scran,
     tibble,
     TreeSummarizedExperiment,
-    uwot
+    uwot,
+    phyloseq
 Remotes:
     github::FelixErnst/mia,
     github::microbiome/miaViz
