renaming of the repo to be inline with other books

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,4 +1,4 @@
-book_filename: "MiaBook"
+book_filename: "OMA"
 pagetitle: "Microbiome Analysis with Bioconductor"
 delete_merged_file: true
 new_session: true
