--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: MiaBook
-Title: Microbiome Analysis Book
-Version: 0.98.5
+Package: OMA
+Title: Orchestrating Microbiome Analysis
+Version: 0.98.6
 Date: 2021-03-05
 Authors@R: 
     c(person("Leo", "Lahti", role = c("aut"),
@@ -14,8 +14,8 @@ Description:
     Bioconductor in R.
 License: CC BY-NC-SA 3.0 US
 Encoding: UTF-8
-URL: https://github.com/microbiome/MiaBook
-BugReports: https://github.com/microbiome/MiaBook/issues
+URL: https://github.com/microbiome/OMA
+BugReports: https://github.com/microbiome/OMA/issues
 LazyData: true
 biocViews:
     Book
@@ -39,7 +39,7 @@ Suggests:
     uwot,
     phyloseq
 Remotes:
-    github::FelixErnst/mia,
+    github::microbiome/mia,
     github::microbiome/miaViz
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
