phylo-div section added (#14)
* phylo-div section added

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: OMA
 Title: Orchestrating Microbiome Analysis
-Version: 0.98.8
-Date: 2021-03-25
+Version: 0.98.9
+Date: 2021-04-10
 Authors@R: 
     c(person("Leo", "Lahti", role = c("aut"),
              comment = c(ORCID = "0000-0001-5537-637X")),
-      person("Sudarshan", "Shetty", role = c("aut")),
+      person("Sudarshan", "Shetty", email = "sudarshanshetty9@gmail.com",
+             role = c("aut"),
+             comment = c(ORCID = "0000-0001-7280-9915")),
       person("Felix GM", "Ernst", email = "felix.gm.ernst@outlook.com",
              role = c("aut", "cre"),
              comment = c(ORCID = "0000-0001-5064-0928")))
@@ -28,6 +30,7 @@ Suggests:
     mia,
     miaViz,
     microbiomeDataSets,
+    picante,
     rebook,
     rmarkdown,
     Rtsne,
