--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -14,7 +14,8 @@ rmd_files: ["index.Rmd",
             "11-taxonomic-information.Rmd",
             "12-quality-control.Rmd",
             "13-microbiome-exploration.Rmd",
-            "14-microbiome-diversity.Rmd",
+            "alpha-diversity.Rmd",
+            "beta-diversity.Rmd",
             "15-microbiome-community.Rmd",
             "16-differential-abundance.Rmd",
             "17-timeseries.Rmd",
