Book fixes and clean-up.

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -14,14 +14,14 @@ rmd_files: ["index.Rmd",
             "11_taxonomic_information.Rmd",
             "12_quality_control.Rmd",
             "13_microbiome_exploration.Rmd",
-            "14a_alpha_diversity.Rmd",
-            "14b_beta_diversity.Rmd",
-            "15_microbiome_community.Rmd",
-            "16_differential_abundance.Rmd",
-            "17_timeseries.Rmd",
-            "18_multitable.Rmd",
+            "14_alpha_diversity.Rmd",
+            "15_beta_diversity.Rmd",
+            "16_microbiome_community.Rmd",
+            "17_differential_abundance.Rmd",
+            "18_timeseries.Rmd",
+            "19_multitable.Rmd",
             # Appendix
             "90_example_data.Rmd",
             "98_function_reference.Rmd",
-            "99_bibliography.Rmd",
-            "interactive_3d_plots.Rmd"]
+            "interactive_3d_plots.Rmd",
+            "99_bibliography.Rmd"]
