Draft of bioc intro

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -8,6 +8,7 @@ language:
 output_dir: "docs"
 rmd_files: ["index.Rmd",
             # Introduction
+            "bioc_intro.Rmd",
             "01_introduction.Rmd",
             # Focus Topics
             "10_overview.Rmd",
