update from last merge.

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -24,5 +24,5 @@ rmd_files: ["index.Rmd",
             # Appendix
             "90_example_data.Rmd",
             "98_function_reference.Rmd",
-            "interactive_3d_plots.Rmd",
-            "99_bibliography.Rmd"]
+            "99_interactive_3d_plots.Rmd",
+            "100_bibliography.Rmd"]
