--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,7 +40,8 @@ Suggests:
     tibble,
     TreeSummarizedExperiment,
     uwot,
-    phyloseq
+    phyloseq,
+    msmbstyle
 Remotes:
     github::microbiome/mia,
     github::microbiome/miaViz
