Added acknowledgments and reorganized initial chapters

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -9,7 +9,9 @@ output_dir: "docs"
 rmd_files: ["index.Rmd",
             # Introduction
             "00_bioc_intro.Rmd",
-            "01_introduction.Rmd",
+            "01_intro.Rmd",
+	    "04_datainfra.Rmd",
+	    # "06_manipulation.Rmd", 	    
             # Focus Topics
             "10_overview.Rmd",
             "11_taxonomic_information.Rmd",
