--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,18 @@ Authors@R:
              comment = c(ORCID = "0000-0001-7280-9915")),
       person("Felix GM", "Ernst", email = "felix.gm.ernst@outlook.com",
              role = c("aut", "cre"),
-             comment = c(ORCID = "0000-0001-5064-0928")))
+             comment = c(ORCID = "0000-0001-5064-0928")),
+      person("Henrik", "Eckermann", 
+             role = c("ctb")),
+      person("Chouaib", "Benchraka", 
+             role = c("ctb")),
+      person("Tuomas", "Borman", 
+             role = c("ctb")),	
+      person("Shigdel", "Rajesh", 
+             role = c("ctb")),     
+      person("Chandler", "Ross", 
+             role = c("ctb"))
+	     )
 Description:
     This is a reference cookbook for performing **Microbiome Analysis** with 
     Bioconductor in R.
