fixed typos and install missing package

--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -151,6 +151,12 @@ jobs:
           remotes::install_cran("rcmdcheck")
           BiocManager::install("BiocCheck")
         shell: Rscript {0}
+        
+      - name: Install tidyverse
+        run: |
+          message(paste('****', Sys.time(), 'installing tidyverse ****'))
+          install.packages("tidyverse")
+        shell: Rscript {0}
 
       - name: Session info
         run: |
