install missing packages

--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -157,7 +157,31 @@ jobs:
           message(paste('****', Sys.time(), 'installing tidyverse ****'))
           install.packages("tidyverse")
         shell: Rscript {0}
-
+        
+      - name: Install tidySummarizedExperiment
+        run: |
+          message(paste('****', Sys.time(), 'installing tidySummarizedExperiment ****'))
+          devtools::install_github("stemangiola/tidySummarizedExperiment")
+        shell: Rscript {0}
+        
+      - name: Install patchwork
+        run: |
+          message(paste('****', Sys.time(), 'installing patchwork ****'))
+          devtools::install_github("thomasp85/patchwork")
+        shell: Rscript {0}
+        
+      - name: Install DESeq2
+        run: |
+          message(paste('****', Sys.time(), 'installing DESeq2 ****'))
+          BiocManager::install("DESeq2")
+        shell: Rscript {0}
+        
+      - name: Install ANCOMBC
+        run: |
+          message(paste('****', Sys.time(), 'installing ANCOMBC ****'))
+          BiocManager::install("ANCOMBC")
+        shell: Rscript {0}
+        
       - name: Session info
         run: |
           options(width = 100)
