Reorganizing some chapters and fixed minor bugs

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -18,11 +18,13 @@ rmd_files: ["index.Rmd",
             "12_quality_control.Rmd",
             "13_microbiome_exploration.Rmd",
             "14_alpha_diversity.Rmd",
-            "15_beta_diversity.Rmd",
-            "16_microbiome_community.Rmd",
-            "17_differential_abundance.Rmd",
-            "18_timeseries.Rmd",
-            "19_multitable.Rmd",
+            "20_beta_diversity.Rmd",
+            "21_microbiome_community.Rmd",
+            "22_communitytyping.Rmd",	    	    
+            "30_differential_abundance.Rmd",
+	    "50_timeseries.Rmd",
+	    "60_networks.Rmd",	   	    
+            "70_multitable.Rmd",
             # Appendix
             "90_example_data.Rmd",
             "98_function_reference.Rmd",
