removed deseq2 and wilcox and added maaslin2 and aldex2

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,7 +51,15 @@ Suggests:
     tibble,
     TreeSummarizedExperiment,
     uwot,
-    phyloseq
+    phyloseq,
+    patchwork,
+    dplyr, 
+    purrr,
+    tidySummarizedExperiment,
+    ANCOMBC,
+    DESeq2,
+    ALDEx2,
+    Maaslin2
 Remotes:
     github::microbiome/mia,
     github::microbiome/miaViz
