--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,8 +34,7 @@ biocViews:
     Book
 Suggests:
     bookdown,
-    dplyr,
-    ggplot2,
+    tidyverse,
     ggpubr,
     knitr,
     mia,
@@ -48,15 +47,12 @@ Suggests:
     scater,
     scuttle,
     scran,
-    tibble,
     TreeSummarizedExperiment,
     uwot,
     phyloseq,
     patchwork,
-    purrr,
     tidySummarizedExperiment,
     ANCOMBC,
-    DESeq2,
     ALDEx2,
     Maaslin2
 Remotes:
