update diffab section as discussed

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,14 +33,16 @@ LazyData: true
 biocViews:
     Book
 Suggests:
+    ALDEx2,
+    ANCOMBC,
     bookdown,
-    dplyr,
-    ggplot2,
     ggpubr,
     knitr,
+    Maaslin2,
     mia,
     miaViz,
     microbiomeDataSets,
+    patchwork,
     picante,
     rebook,
     rmarkdown,
@@ -48,7 +50,8 @@ Suggests:
     scater,
     scuttle,
     scran,
-    tibble,
+    tidyverse,
+    tidySummarizedExperiment,
     TreeSummarizedExperiment,
     uwot,
     phyloseq
