move time series ch into its own branch

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -22,7 +22,7 @@ rmd_files: ["index.Rmd",
             "21_microbiome_community.Rmd",
             "22_communitytyping.Rmd",	    	    
             "30_differential_abundance.Rmd",
-	    "50_timeseries.Rmd",
+	    #"50_timeseries.Rmd",
 	    #"60_networks.Rmd",	   	    
             "70_multitable.Rmd",
             # Appendix
