Moving OMA contributors from DESCRIPTION file to Intro section and only keeping main editors listed in DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,17 +10,7 @@ Authors@R:
              comment = c(ORCID = "0000-0001-7280-9915")),
       person("Felix GM", "Ernst", email = "felix.gm.ernst@outlook.com",
              role = c("aut", "cre"),
-             comment = c(ORCID = "0000-0001-5064-0928")),
-      person("Henrik", "Eckermann", 
-             role = c("ctb")),
-      person("Chouaib", "Benchraka", 
-             role = c("ctb")),
-      person("Tuomas", "Borman", 
-             role = c("ctb")),	
-      person("Shigdel", "Rajesh", 
-             role = c("ctb")),     
-      person("Chandler", "Ross", 
-             role = c("ctb"))
+             comment = c(ORCID = "0000-0001-5064-0928"))
 	     )
 Description:
     This is a reference cookbook for performing **Microbiome Analysis** with 
