improving book organization

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -7,11 +7,12 @@ language:
     chapter_name: "Chapter "
 output_dir: "docs"
 rmd_files: ["index.Rmd",
+
             # Introduction
             "00_bioc_intro.Rmd",
             "01_intro.Rmd",
 	    "04_datainfra.Rmd",
-	    # "06_manipulation.Rmd", 	    
+	    
             # Focus Topics
             #"10_overview.Rmd",
             "11_taxonomic_information.Rmd",
@@ -25,7 +26,11 @@ rmd_files: ["index.Rmd",
 	    #"50_timeseries.Rmd",
 	    #"60_networks.Rmd",	   	    
             "70_multitable.Rmd",
-            # Appendix
+	    
+            # Workflows
+	    "80_workflows.Rmd",
+	    
+            # Appendix	    
             "90_example_data.Rmd",
             "98_function_reference.Rmd",
             "99_interactive_3d_plots.Rmd",
