--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -136,6 +136,7 @@ jobs:
           ## Ideally, all dependencies should get installed in the first pass.
 
           BiocManager::install("HDF5Array")
+	  BiocManager::install("mia")	  
           BiocManager::install("fionarhuang/TreeSummarizedExperiment")
 
           ## Pass #1 at installing dependencies
