--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -135,7 +135,7 @@ jobs:
           ## https://github.com/r-lib/remotes/issues/296
           ## Ideally, all dependencies should get installed in the first pass.
           BiocManager::install("HDF5Array")
-          BiocManager::install("mia")	  
+          BiocManager::install("microbiome/mia")
           BiocManager::install("fionarhuang/TreeSummarizedExperiment")
 
           ## Pass #1 at installing dependencies
