--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -134,6 +134,7 @@ jobs:
           ## https://stat.ethz.ch/pipermail/bioc-devel/2020-April/016675.html
           ## https://github.com/r-lib/remotes/issues/296
           ## Ideally, all dependencies should get installed in the first pass.
+          update.packages("matrixStats")	  	  
           BiocManager::install("HDF5Array")
           BiocManager::install("microbiome/mia")
           BiocManager::install("fionarhuang/TreeSummarizedExperiment")
