--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -134,9 +134,9 @@ jobs:
           ## https://stat.ethz.ch/pipermail/bioc-devel/2020-April/016675.html
           ## https://github.com/r-lib/remotes/issues/296
           ## Ideally, all dependencies should get installed in the first pass.
-          update.packages("matrixStats")	  	  
+	  remotes::install_github("HenrikBengtsson/matrixStats", ref="develop")	# Remove when 0.60.1 available
           BiocManager::install("HDF5Array")
-          BiocManager::install("microbiome/mia")
+          #BiocManager::install("microbiome/mia")
           BiocManager::install("fionarhuang/TreeSummarizedExperiment")
 
           ## Pass #1 at installing dependencies
