--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -134,7 +134,9 @@ jobs:
           ## https://stat.ethz.ch/pipermail/bioc-devel/2020-April/016675.html
           ## https://github.com/r-lib/remotes/issues/296
           ## Ideally, all dependencies should get installed in the first pass.
-	  remotes::install_github("HenrikBengtsson/matrixStats", ref="develop")	# Remove when 0.60.1 available
+
+          # Remove when 0.60.1 available
+	  remotes::install_github("HenrikBengtsson/matrixStats", ref="develop")	
           BiocManager::install("HDF5Array")
           #BiocManager::install("microbiome/mia")
           BiocManager::install("fionarhuang/TreeSummarizedExperiment")
