--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -9,9 +9,9 @@ output_dir: "docs"
 rmd_files: ["index.Rmd",
 
             # Introduction
-            "00_bioc_intro.Rmd",
             "01_intro.Rmd",
-	    "04_datainfra.Rmd",
+	    "03_datainfra.Rmd",
+	    "04_containers.Rmd",	    
             "05_example_data.Rmd",
 
             # Focus Topics
@@ -26,12 +26,12 @@ rmd_files: ["index.Rmd",
             "30_differential_abundance.Rmd",
 	    #"50_timeseries.Rmd",
 	    #"60_networks.Rmd",	   	    
-            "70_multitable.Rmd",
 	    
             # Workflows
 	    # "80_workflows.Rmd",
 	    
             # Appendix	    
-            "98_function_reference.Rmd",
-            "99_interactive_3d_plots.Rmd",
-            "100_bibliography.Rmd"]
+            "96_function_reference.Rmd",
+            "97_interactive_3d_plots.Rmd",
+            "98_bioc_intro.Rmd",	    
+            "99_bibliography.Rmd"]
