--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -10,12 +10,14 @@ rmd_files: ["index.Rmd",
 
             # Introduction
             "01_intro.Rmd",
-	    "03_datainfra.Rmd",
+	    # "03_datainfra.Rmd",
 	    "04_containers.Rmd",	    
-            "05_example_data.Rmd",
+            # "05_example_data.Rmd",
+            "06_packages.Rmd",	    
 
             # Focus Topics
             #"10_overview.Rmd",
+	    "10_manipulation.Rmd",
             "11_taxonomic_information.Rmd",
             "12_quality_control.Rmd",
             "13_microbiome_exploration.Rmd",
@@ -30,8 +32,8 @@ rmd_files: ["index.Rmd",
             # Workflows
 	    # "80_workflows.Rmd",
 	    
-            # Appendix	    
+            # Appendix
+	    "95_resources.Rmd",
             "96_function_reference.Rmd",
             "97_interactive_3d_plots.Rmd",
-            "98_bioc_intro.Rmd",	    
             "99_bibliography.Rmd"]
