adding microbiomeDataSets update

--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -138,7 +138,7 @@ jobs:
           # Remove when 0.60.1 available
           remotes::install_github("HenrikBengtsson/matrixStats", ref="develop")
           BiocManager::install("HDF5Array")
-          #BiocManager::install("microbiome/mia")
+          BiocManager::install("microbiome/microbiomeDataSets")
           BiocManager::install("fionarhuang/TreeSummarizedExperiment")
 
           ## Pass #1 at installing dependencies
