--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -33,6 +33,7 @@ rmd_files: ["index.Rmd",
 	    # "80_workflows.Rmd",
 	    
             # Appendix
+	    "90_acknowledgments.Rmd",	    
 	    "95_resources.Rmd",
             "96_function_reference.Rmd",
             "97_interactive_3d_plots.Rmd",
