--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -35,6 +35,6 @@ rmd_files: ["index.Rmd",
             # Appendix
 	    "90_acknowledgments.Rmd",	    
 	    "95_resources.Rmd",
-            "96_function_reference.Rmd",
+            # "96_function_reference.Rmd",
             "97_interactive_3d_plots.Rmd",
             "99_bibliography.Rmd"]
