--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -11,31 +11,34 @@ rmd_files: ["index.Rmd",
             # Introduction
             "01_intro.Rmd",
 	    # "03_datainfra.Rmd",
-	    "04_containers.Rmd",	    
+	    "04_containers.Rmd",
             # "05_example_data.Rmd",
-            "06_packages.Rmd",	    
-	    
+            "06_packages.Rmd",
+
             # Focus Topics
             #"10_overview.Rmd",
-	    "10_manipulation.Rmd",	    
+	    "10_manipulation.Rmd",
             "12_quality_control.Rmd",
             "11_taxonomic_information.Rmd",
-	    
+
             "14_alpha_diversity.Rmd",
             "20_beta_diversity.Rmd",
-	    
-            "21_microbiome_community.Rmd",	    
-  	    
+
+            "21_microbiome_community.Rmd",
+
             "30_differential_abundance.Rmd",
+
+            "23_multi-assay_analyses.Rmd",
+
 	    #"50_timeseries.Rmd",
-	    #"60_networks.Rmd",	   	    
-	    
+	    #"60_networks.Rmd",
+
             # Workflows
 	    # "80_workflows.Rmd",
-	    
+
             # Appendix
 	    "95_resources.Rmd",
             # "96_function_reference.Rmd",
             "97_interactive_3d_plots.Rmd",
-	    "90_acknowledgments.Rmd",	    	    
+	    "90_acknowledgments.Rmd",
             "99_bibliography.Rmd"]
