--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -140,6 +140,8 @@ jobs:
           BiocManager::install("HDF5Array")
           BiocManager::install("microbiome/microbiomeDataSets")
           BiocManager::install("fionarhuang/TreeSummarizedExperiment")
+          # Remove when available in docker
+          BiocManager::install("curatedMetagenomicData")
 
           ## Pass #1 at installing dependencies
           message(paste('****', Sys.time(), 'pass number 1 at installing dependencies: local dependencies ****'))
