installation instruction fix

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -41,4 +41,5 @@ rmd_files: ["index.Rmd",
             # "96_function_reference.Rmd",
             "97_interactive_3d_plots.Rmd",
 	    "90_acknowledgments.Rmd",
-            "99_bibliography.Rmd"]
+            "99_bibliography.Rmd"
+	    ]
