--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -25,6 +25,7 @@ rmd_files: ["index.Rmd",
             "20_beta_diversity.Rmd",
 
             "21_microbiome_community.Rmd",
+            "24_biclustering.Rmd",	    
 
             "30_differential_abundance.Rmd",
 
