--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -2,6 +2,7 @@ book_filename: "OMA"
 pagetitle: "Microbiome Analysis with Bioconductor"
 delete_merged_file: true
 new_session: true
+always_allow_html: true
 language:
   ui:
     chapter_name: "Chapter "
