--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -183,6 +183,8 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           Rscript -e 'tinytex::install_tinytex()'
+          Rscript -e 'install.packages("webshot")'
+          Rscript -e 'webshot::install_phantomjs()'
           Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::pdf_book")'
 
       - name: Bookdown Deploy
