--- a/_output.yml
+++ b/_output.yml
@@ -17,7 +17,7 @@ bookdown::gitbook:
 
 bookdown::pdf_book:
   includes:
-    in_header: preamble.tex
+    in_header: ["preamble.tex", "wrap_code.tex"]
   latex_engine: xelatex
   citation_package: natbib
   keep_tex: yes
