Finalise visualization chapter

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -30,6 +30,7 @@ rmd_files: ["index.Rmd",
             "30_differential_abundance.Rmd",
 
             "23_multi-assay_analyses.Rmd",
+	    "19_visualization_techniques.Rmd",
 
     	    #"50_timeseries.Rmd",
     	    #"60_networks.Rmd",
