--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -138,6 +138,7 @@ jobs:
           # Remove when 0.60.1 available
           remotes::install_github("HenrikBengtsson/matrixStats", ref="develop")
           BiocManager::install("Cairo")
+          BiocManager::install("biclust")	  
           BiocManager::install("HDF5Array")
           BiocManager::install("microbiome/microbiomeDataSets")
           BiocManager::install("fionarhuang/TreeSummarizedExperiment")
