--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -139,6 +139,7 @@ jobs:
           remotes::install_github("HenrikBengtsson/matrixStats", ref="develop")
           BiocManager::install("Cairo")
           BiocManager::install("biclust")	  
+          BiocManager::install("cobiclust")	  	  
           BiocManager::install("HDF5Array")
           BiocManager::install("microbiome/microbiomeDataSets")
           BiocManager::install("fionarhuang/TreeSummarizedExperiment")
