--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -145,6 +145,7 @@ jobs:
           BiocManager::install("fionarhuang/TreeSummarizedExperiment")
           # Remove when available in docker
           BiocManager::install("curatedMetagenomicData")
+          BiocManager::install("sechm")
 
           ## Pass #1 at installing dependencies
           message(paste('****', Sys.time(), 'pass number 1 at installing dependencies: local dependencies ****'))
