--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -169,6 +169,7 @@ jobs:
           commit=$(git --work-tree=../ rev-parse --verify --short HEAD)
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+          git config --global --add safe.directory /__w/OMA/OMA  
           git worktree add --track -B gh-pages docs origin/gh-pages
       - name: Bookdown
         if: runner.os == 'Linux'
