--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -167,8 +167,8 @@ jobs:
         run: |
           git fetch --all
           commit=$(git --work-tree=../ rev-parse --verify --short HEAD)
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --global user.email "action@github.com"
+          git config --global user.name "GitHub Action"
           git config --global --add safe.directory /__w/OMA/OMA  
           git worktree add --track -B gh-pages docs origin/gh-pages
       - name: Bookdown
