--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -30,7 +30,7 @@ rmd_files: ["index.Rmd",
             "30_differential_abundance.Rmd",
 
             "23_multi-assay_analyses.Rmd",
-	    "19_visualization_techniques.Rmd",
+	        "19_visualization_techniques.Rmd",
 
     	    #"50_timeseries.Rmd",
     	    #"60_networks.Rmd",
@@ -43,5 +43,6 @@ rmd_files: ["index.Rmd",
             # "96_function_reference.Rmd",
             "97_interactive_3d_plots.Rmd",
 	        "90_acknowledgments.Rmd",
+	        "98_exercises.Rmd",
             "99_bibliography.Rmd"
 	    ]
