--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -138,8 +138,9 @@ jobs:
           BiocManager::install("biclust")	  
           BiocManager::install("cobiclust")	  	  
           BiocManager::install("HDF5Array")
+          BiocManager::install("fionarhuang/TreeSummarizedExperiment")	  
           BiocManager::install("microbiome/microbiomeDataSets")
-          BiocManager::install("fionarhuang/TreeSummarizedExperiment")
+          BiocManager::install("microbiome/miaTime")	  	  
           # Remove when available in docker
           BiocManager::install("curatedMetagenomicData")
           BiocManager::install("sechm")
