--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -134,13 +134,14 @@ jobs:
           ## Ideally, all dependencies should get installed in the first pass.
           # Remove when 0.60.1 available
           remotes::install_github("HenrikBengtsson/matrixStats", ref="develop")
+          remotes::install_github("FrederickHuangLin/ANCOMBC")
           BiocManager::install("Cairo")
-          BiocManager::install("biclust")	  
-          BiocManager::install("cobiclust")	  	  
+          BiocManager::install("biclust")  
+          BiocManager::install("cobiclust")    
           BiocManager::install("HDF5Array")
-          BiocManager::install("fionarhuang/TreeSummarizedExperiment")	  
+          BiocManager::install("fionarhuang/TreeSummarizedExperiment")  
           BiocManager::install("microbiome/microbiomeDataSets")
-          BiocManager::install("microbiome/miaTime")	  	  
+          BiocManager::install("microbiome/miaTime")  
           # Remove when available in docker
           BiocManager::install("curatedMetagenomicData")
           BiocManager::install("sechm")
