--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,9 @@ Authors@R:
       person("Sudarshan", "Shetty", email = "sudarshanshetty9@gmail.com",
              role = c("aut"),
              comment = c(ORCID = "0000-0001-7280-9915")),
+      person(given = "Tuomas", family = "Borman", role = c("aut", "cre"),
+             email = "tuomas.v.borman@utu.fi",
+             comment = c(ORCID = "0000-0002-8563-8884")),
       person("Felix GM", "Ernst", email = "felix.gm.ernst@outlook.com",
              role = c("aut", "cre"),
              comment = c(ORCID = "0000-0001-5064-0928"))
