--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Authors@R:
              email = "tuomas.v.borman@utu.fi",
              comment = c(ORCID = "0000-0002-8563-8884")),
       person("Felix GM", "Ernst", email = "felix.gm.ernst@outlook.com",
-             role = c("aut", "cre"),
+             role = c("aut"),
              comment = c(ORCID = "0000-0001-5064-0928"))
 	     )
 Description:
