--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -25,9 +25,12 @@ rmd_files: ["index.Rmd",
             "20_beta_diversity.Rmd",
 
             "21_microbiome_community.Rmd",
-            "24_biclustering.Rmd",
+            #"24_biclustering.Rmd",
+            "24_clustering.Rmd",
 
             "30_differential_abundance.Rmd",
+
+            "40_machine_learning.Rmd",
 
             "23_multi-assay_analyses.Rmd",
 	        "19_visualization_techniques.Rmd",
