Added to DESCRIPTION the supporting R pkgs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,17 +30,21 @@ biocViews:
 Suggests:
     ALDEx2,
     ANCOMBC,
+    benchdamic,
     bookdown,
+    curatedMetagenomicData,
     ggpubr,
     kableExtra,
     knitr,
     Maaslin2,
     mia,
     miaViz,
+    MicrobiotaProcess,
     MicrobiomeStat,
     microbiomeDataSets,
     patchwork,
-    picante,
+    philr,
+    picante,    
     rebook,
     rmarkdown,
     Rtsne,
@@ -54,6 +58,8 @@ Suggests:
     phyloseq
 Remotes:
     github::microbiome/mia,
-    github::microbiome/miaViz
+    github::microbiome/miaViz,
+    github::microbiome/miaSim,        
+    github::microbiome/miaTime
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
