--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -44,7 +44,7 @@ rmd_files: ["index.Rmd",
             # Appendix
 	        "95_resources.Rmd",
             # "96_function_reference.Rmd",
-            "97_interactive_3d_plots.Rmd",
+            "97_extra_materials.Rmd",
 	        "90_acknowledgments.Rmd",
 	        "98_exercises.Rmd",
             "99_bibliography.Rmd"
