--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -23,29 +23,22 @@ rmd_files: ["index.Rmd",
 
             "14_alpha_diversity.Rmd",
             "20_beta_diversity.Rmd",
-
             "21_microbiome_community.Rmd",
             #"24_biclustering.Rmd",
             "24_clustering.Rmd",
-
             "30_differential_abundance.Rmd",
-
             "40_machine_learning.Rmd",
-
             "23_multi-assay_analyses.Rmd",
-	        "19_visualization_techniques.Rmd",
-
+	    "19_visualization_techniques.Rmd",
     	    #"50_timeseries.Rmd",
     	    #"60_networks.Rmd",
-
-            # Workflows
-    	    # "80_workflows.Rmd",
-
             # Appendix
-	        "95_resources.Rmd",
+    	    "80_training.Rmd",	    
+	    "95_resources.Rmd",
             # "96_function_reference.Rmd",
             "97_extra_materials.Rmd",
-	        "90_acknowledgments.Rmd",
-	        "98_exercises.Rmd",
-            "99_bibliography.Rmd"
+	    "90_acknowledgments.Rmd",
+	    "98_exercises.Rmd",
+            "99_bibliography.Rmd",
+            "99_contributors.Rmd"	    
 	    ]
