--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -7,20 +7,17 @@ language:
     chapter_name: "Chapter "
 output_dir: "docs"
 rmd_files: ["index.Rmd",
-
             # Introduction
             "01_intro.Rmd",
-	        # "03_datainfra.Rmd",
-	        "04_containers.Rmd",
+	    # "03_datainfra.Rmd",
+	    "04_containers.Rmd",
             # "05_example_data.Rmd",
             "06_packages.Rmd",
-
             # Focus Topics
             #"10_overview.Rmd",
-	        "10_manipulation.Rmd",
+	    "10_manipulation.Rmd",
             "12_quality_control.Rmd",
             "11_taxonomic_information.Rmd",
-
             "14_alpha_diversity.Rmd",
             "20_beta_diversity.Rmd",
             "21_microbiome_community.Rmd",
@@ -39,6 +36,5 @@ rmd_files: ["index.Rmd",
             "97_extra_materials.Rmd",
 	    "90_acknowledgments.Rmd",
 	    "98_exercises.Rmd",
-            "99_bibliography.Rmd",
-            "99_contributors.Rmd"	    
+            "99_bibliography.Rmd"
 	    ]
